fix: navbar too tall in mobile layouts

--- a/src/components/NavBar/navbar-styles.css
+++ b/src/components/NavBar/navbar-styles.css
@@ -110,8 +110,8 @@
                 grid-column-start: span 4;
             }
             .navitem {
-                padding-bottom: 1.5rem;
-                width: calc((((100vw - 4rem) / 3) - (1.25rem / 2)) * 0.985);
+                height: calc(var(--row-height) * 0.6);
+                width: calc(100%);
 
                 .dropdown {
                     .dropdown-item {
